--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="lemonade">
+<html lang="en" data-theme="cupcake">
   <head>
     <meta charset="utf-8">
     <title>Proyectoexamen</title>
